--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Restore NuGet packages
         run: nuget restore SonarCloud.CSharp.JavaScript.sln
 
-      - name: Build solution
-        run: msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release
+      # - name: Build solution
+      #   run: msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release
         
       - name: Debug Check Coverage Files
         run: ls -R TestResults
@@ -45,10 +45,49 @@ jobs:
         run: npm install
         working-directory: WebApplication/Scripts
 
-      # Run Jest Tests & Generate Coverage Report
+      # Run Jest Tests & Generate Coverage Report, output is ./coverage/lcov.info
       - name: Run Jest tests
         run: npm test -- --coverage
         working-directory: WebApplication/Scripts
+
+      - name: Build, Test, and Analyze Code with Coverage
+        shell: powershell
+        run: |
+          dotnet tool install --global dotnet-sonarscanner
+
+          # New-Item -Path .\.sonar\scanner -ItemType Directory
+          # dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+
+          # SONAR BEGIN
+
+          #.\.sonar\scanner\dotnet-sonarscanner begin /k:"cfcu-ecommerce_${{ inputs.moduleName }}" /o:"cfcu-ecommerce" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=coverage.xml
+          dotnet sonarscanner begin /k:"nguyen365-build_sonarcloud_csharp_javascript" /o:"365nguyen" /d:sonar.host.url="https://sonarcloud.io"  /d:sonar.login="${{ secrets.SONAR_TOKEN }}"  /d:sonar.cs.opencover.reportsPaths=coverage.xml /d:sonar.javascript.lcov.reportPaths=coverage/lcov.info /p:sonar.verbose=true
+
+          msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release
+
+          $currentDirectory = Get-Location
+          Write-Host "Current Directory: $currentDirectory"
+      
+          Get-ChildItem -Path $currentDirectory -Filter OpenCover.Console.exe -Recurse
+          Get-ChildItem -Path $currentDirectory -Filter ReportGenerator.exe -Recurse
+              
+          $currentDirectory = Get-Location
+          Write-Host "Current Directory: $currentDirectory"
+          # Search for OpenCover and ReportGenerator executables
+          $openCoverPath = Get-ChildItem -Path . -Recurse -Filter "OpenCover.Console.exe" -File | Select-Object -ExpandProperty FullName
+          $reportGeneratorPath = Get-ChildItem -Path . -Recurse -Filter "ReportGenerator.exe" -File | Where-Object { $_.FullName -match '\\net47\\' } | Select-Object -ExpandProperty FullName
+          if (-not $openCoverPath) { Write-Host "OpenCover not found!"; exit 1 }
+          if (-not $reportGeneratorPath) { Write-Host "ReportGenerator not found!"; exit 1 }
+          Write-Host "OpenCover found at: $openCoverPath"
+          Write-Host "ReportGenerator found at: $reportGeneratorPath"
+          # Run OpenCover
+          & $openCoverPath -target:"vstest.console.exe" -targetargs:"WebApplication.Test\bin\Release\WebApplication.Test.dll" -register:user -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.opencover.xml
+          # Convert coverage report with ReportGenerator
+          & $reportGeneratorPath "-reports:coverage.opencover.xml" "-targetdir:TestResults" -reporttypes:Cobertura
+
+          # SONAR BEGIN
+          #.\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
 
       - name: Build, Test, and Analyze Code with Coverage
         shell: powershell
