--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,13 +55,13 @@ jobs:
         run: |
           # dotnet tool install --global dotnet-sonarscanner
 
-          # New-Item -Path .\.sonar\scanner -ItemType Directory
-          # dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+          New-Item -Path .\.sonar\scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
 
           # SONAR BEGIN
 
-          #.\.sonar\scanner\dotnet-sonarscanner begin /k:"cfcu-ecommerce_${{ inputs.moduleName }}" /o:"cfcu-ecommerce" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=coverage.xml
-          dotnet sonarscanner begin /k:"nguyen365-build_sonarcloud_csharp_javascript" /o:"365nguyen" /d:sonar.host.url="https://sonarcloud.io"  /d:sonar.login="${{ secrets.SONAR_TOKEN }}"  /d:sonar.cs.opencover.reportsPaths=coverage.xml /d:sonar.javascript.lcov.reportPaths=coverage/lcov.info /p:sonar.verbose=true
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"nguyen365-build_sonarcloud_csharp_javascript" /o:"365nguyen" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=coverage.xml /d:sonar.javascript.lcov.reportPaths=coverage/lcov.info /p:sonar.verbose=true
+          #dotnet sonarscanner begin /k:"nguyen365-build_sonarcloud_csharp_javascript" /o:"365nguyen" /d:sonar.host.url="https://sonarcloud.io"  /d:sonar.login="${{ secrets.SONAR_TOKEN }}"  /d:sonar.cs.opencover.reportsPaths=coverage.xml /d:sonar.javascript.lcov.reportPaths=coverage/lcov.info /p:sonar.verbose=true
 
           msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release
 
@@ -86,8 +86,8 @@ jobs:
           & $reportGeneratorPath "-reports:coverage.opencover.xml" "-targetdir:TestResults" -reporttypes:Cobertura
 
           # SONAR BEGIN
-          #.\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
-          dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          # dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
 
 #      - name: Build, Test, and Analyze Code with Coverage
 #       shell: powershell
