--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,20 +68,24 @@ jobs:
           $currentDirectory = Get-Location
           Write-Host "Current Directory: $currentDirectory"
       
-          Get-ChildItem -Path $currentDirectory -Filter OpenCover.Console.exe -Recurse
-          Get-ChildItem -Path $currentDirectory -Filter ReportGenerator.exe -Recurse
+          # Get-ChildItem -Path $currentDirectory -Filter OpenCover.Console.exe -Recurse
+          # Get-ChildItem -Path $currentDirectory -Filter ReportGenerator.exe -Recurse
               
-          $currentDirectory = Get-Location
-          Write-Host "Current Directory: $currentDirectory"
+          # $currentDirectory = Get-Location
+          # Write-Host "Current Directory: $currentDirectory"
           # Search for OpenCover and ReportGenerator executables
+
           $openCoverPath = Get-ChildItem -Path . -Recurse -Filter "OpenCover.Console.exe" -File | Select-Object -ExpandProperty FullName
           $reportGeneratorPath = Get-ChildItem -Path . -Recurse -Filter "ReportGenerator.exe" -File | Where-Object { $_.FullName -match '\\net47\\' } | Select-Object -ExpandProperty FullName
+          $vstestPath = Get-Command vstest.console.exe -ErrorAction SilentlyContinue | Select-Object -ExpandProperty Source
+
           if (-not $openCoverPath) { Write-Host "OpenCover not found!"; exit 1 }
           if (-not $reportGeneratorPath) { Write-Host "ReportGenerator not found!"; exit 1 }
           Write-Host "OpenCover found at: $openCoverPath"
           Write-Host "ReportGenerator found at: $reportGeneratorPath"
+
           # Run OpenCover
-          & $openCoverPath -target:"vstest.console.exe" -targetargs:"WebApplication.Test\bin\Release\WebApplication.Test.dll" -register:user -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.opencover.xml
+          & $openCoverPath -target:$vstestPath -targetargs:"WebApplication.Test\bin\Release\WebApplication.Test.dll" -register:user -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.opencover.xml
           # Convert coverage report with ReportGenerator
           & $reportGeneratorPath "-reports:coverage.opencover.xml" "-targetdir:TestResults" -reporttypes:Cobertura
 
