dotnet tool update dotnet-sonarscanner

--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -49,6 +49,8 @@ jobs:
 
       - name: Start SonarCloud Analysis
         run: |
+          New-Item -Path .\.sonar\scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
           dotnet-sonarscanner begin /k:"nguyen365-build_sonarcloud_csharp_javascript" /o:"365nguyen" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths=coverage.opencover.xml /d:sonar.javascript.lcov.reportPaths=coverage/lcov.info /p:sonar.verbose=true
 
       - name: Build Solution
