msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release

--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -53,7 +53,7 @@ jobs:
           & $sonarScannerPath begin /k:"nguyen365-build_sonarcloud_csharp_javascript" /o:"365nguyen" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths=coverage.opencover.xml /d:sonar.javascript.lcov.reportPaths=coverage/lcov.info /d:sonar.scanner.scanAll=true
 
       - name: Build Solution
-        run: msbuild SonarCloud.CSharp.JavaScript.sln --configuration Release
+        run: msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release
 
       - name: Run Tests & Collect Coverage
         shell: powershell
