--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -46,9 +46,10 @@ jobs:
 
       - name: Start SonarCloud Analysis
         run: |
-          New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-          $sonarScannerPath = (Get-ChildItem -Path . -Recurse -Filter "dotnet-sonarscanner.exe" -File | Select-Object -First 1).FullName
+          # New-Item -Path .\.sonar\scanner -ItemType Directory
+          # dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+          # $sonarScannerPath = (Get-ChildItem -Path . -Recurse -Filter "dotnet-sonarscanner.exe" -File | Select-Object -First 1).FullName
+          $sonarScannerPath = (Get-ChildItem -Path C:\ -Recurse -Filter "dotnet-sonarscanner.exe" -ErrorAction SilentlyContinue -File | Select-Object -First 1).FullName
           Write-Host "sonarScannerPath found at: $sonarScannerPath"
           & $sonarScannerPath begin /k:"nguyen365-build_sonarcloud_csharp_javascript" /o:"365nguyen" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths=coverage.opencover.xml /d:sonar.javascript.lcov.reportPaths=coverage/lcov.info /d:sonar.scanner.scanAll=true
 
@@ -82,5 +83,5 @@ jobs:
 
       - name: End SonarCloud Analysis
         run: |
-            $sonarScannerPath = (Get-Command dotnet-sonarscanner -ErrorAction SilentlyContinue | Select-Object -ExpandProperty Source)
+            $sonarScannerPath = (Get-ChildItem -Path C:\ -Recurse -Filter "dotnet-sonarscanner.exe" -ErrorAction SilentlyContinue -File | Select-Object -First 1).FullName
             & $sonarScannerPath end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
