--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -50,8 +50,9 @@ jobs:
           # dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
           # $sonarScannerPath = (Get-ChildItem -Path . -Recurse -Filter "dotnet-sonarscanner.exe" -File | Select-Object -First 1).FullName
           $sonarScannerPath = (Get-ChildItem -Path C:\ -Recurse -Filter "dotnet-sonarscanner.exe" -ErrorAction SilentlyContinue -File | Select-Object -First 1).FullName
+          $lcovInfoPath = (Get-ChildItem -Path . -Recurse -Filter "lcov.info" -ErrorAction SilentlyContinue -File | Select-Object -First 1).FullName
           Write-Host "sonarScannerPath found at: $sonarScannerPath"
-          & $sonarScannerPath begin /k:"nguyen365-build_sonarcloud_csharp_javascript" /o:"365nguyen" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths=coverage.opencover.xml /d:sonar.javascript.lcov.reportPaths=coverage/lcov.info /d:sonar.scanner.scanAll=true
+          & $sonarScannerPath begin /k:"nguyen365-build_sonarcloud_csharp_javascript" /o:"365nguyen" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths=coverage.opencover.xml /d:sonar.javascript.lcov.reportPaths=$lcovInfoPath /d:sonar.scanner.scanAll=true
 
       - name: Build Solution
         run: msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release
