--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -46,9 +46,6 @@ jobs:
 
       - name: Start SonarCloud Analysis
         run: |
-          # New-Item -Path .\.sonar\scanner -ItemType Directory
-          # dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-          # $sonarScannerPath = (Get-ChildItem -Path . -Recurse -Filter "dotnet-sonarscanner.exe" -File | Select-Object -First 1).FullName
           $sonarScannerPath = (Get-ChildItem -Path C:\ -Recurse -Filter "dotnet-sonarscanner.exe" -ErrorAction SilentlyContinue -File | Select-Object -First 1).FullName
           $lcovInfoPath = (Get-ChildItem -Path . -Recurse -Filter "lcov.info" -ErrorAction SilentlyContinue -File | Select-Object -First 1).FullName
           Write-Host "sonarScannerPath found at: $sonarScannerPath"
@@ -56,7 +53,7 @@ jobs:
           /k:"nguyen365-build_sonarcloud_csharp_javascript" `
           /o:"365nguyen" `
           /d:sonar.host.url="https://sonarcloud.io" `
-          /d:sonar.login="${{ secrets.SONAR_TOKEN }}" `
+          /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
           /d:sonar.cs.opencover.reportsPaths=coverage.opencover.xml `
           /d:sonar.javascript.lcov.reportPaths=$lcovInfoPath `
           /d:sonar.scanner.scanAll=true
