--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -56,7 +56,7 @@ jobs:
           /o:"365nguyen" `
           /d:sonar.host.url="https://sonarcloud.io" `
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
-          /d:sonar.cs.opencover.reportsPaths="coverage.opencover.xml `
+          /d:sonar.cs.opencover.reportsPaths="coverage.opencover.xml" `
           /d:sonar.javascript.lcov.reportPaths="coverage/lcov.info" `
           /d:sonar.scanner.scanAll=true
 
