--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -57,7 +57,7 @@ jobs:
           /d:sonar.host.url="https://sonarcloud.io" `
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
           -d:sonar.exclusions="node_modules/**, **/*.config.js" `
-          /d:sonar.cs.opencover.reportsPaths="coverage.opencover.xml" `
+          /d:sonar.cs.opencover.reportsPaths="dcoverage.opencover.xml" `
           /d:sonar.javascript.lcov.reportPaths="$lcovInfoPath" `
           /d:sonar.scanner.scanAll=true
 
