--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -68,7 +68,7 @@ jobs:
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
           -d:sonar.exclusions="node_modules/**, **/*.config.js" `
           /d:sonar.cs.opencover.reportsPaths="coverage.opencover.xml" `
-          /d:sonar.javascript.lcov.reportPaths="./coverage/lcov.info" `
+          /d:sonar.javascript.lcov.reportPaths="coverage\lcov.info" `
           /d:sonar.scanner.scanAll=true
 
       - name: Build Solution
