--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -52,6 +52,7 @@ jobs:
               exit 1
           } else {
               Write-Host "JavaScript coverage file found at: coverage\lcov.info"
+              Copy-Item -Path "coverage\lcov.info" -Destination "lcov.info" -Force
           }
 
       - name: Start SonarCloud Analysis
@@ -68,7 +69,7 @@ jobs:
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
           -d:sonar.exclusions="node_modules/**, **/*.config.js" `
           /d:sonar.cs.opencover.reportsPaths="coverage.opencover.xml" `
-          /d:sonar.javascript.lcov.reportPaths="coverage\lcov.info" `
+          /d:sonar.javascript.lcov.reportPaths="lcov.info" `
           /d:sonar.scanner.scanAll=true
 
       - name: Build Solution
