--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -73,7 +73,7 @@ jobs:
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
           -d:sonar.exclusions="node_modules/**, **/*.config.js" `
           /d:sonar.cs.opencover.reportsPaths="coverage.opencover.xml" `
-          /d:sonar.javascript.lcov.reportPaths=".\lcov.info" `
+          /d:sonar.javascript.lcov.reportPaths="$$lcovInfoPath" `
           /d:sonar.scanner.scanAll=true
 
       - name: Build Solution
