update source path

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -58,6 +58,7 @@ jobs:
         run: |
           $sonarScannerPath = (Get-ChildItem -Path C:\ -Recurse -Filter "dotnet-sonarscanner.exe" -ErrorAction SilentlyContinue -File | Select-Object -First 1).FullName
           $lcovInfoPath = (Get-ChildItem -Path . -Recurse -Filter "lcov.info" -ErrorAction SilentlyContinue -File | Select-Object -First 1).FullName
+          $sourcePath = Split-Path -Path (Split-Path -Path $lcovInfoPath -Parent) -Parent
           Write-Host "sonarScannerPath found at: $sonarScannerPath"
           Write-Host "lcovInfoPath found at: $lcovInfoPath"
 
@@ -71,8 +72,7 @@ jobs:
           /d:sonar.host.url="https://sonarcloud.io" `
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
           -d:sonar.exclusions="node_modules/**, **/*.config.js" `
-          -d:sonar.sources="WebApplication\Scripts" `
-          -d:sonar.tests="WebApplication\Tests" `
+          -d:sonar.sources="$sourcePath" `
           /d:sonar.cs.opencover.reportsPaths="coverage.opencover.xml" `
           /d:sonar.javascript.lcov.reportPaths="$lcovInfoPath" `
           /d:sonar.scanner.scanAll=true `
